--- a/Arrow/Arrow.vcxproj
+++ b/Arrow/Arrow.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="GLProgram.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="Color.h" />
     <ClInclude Include="FileManager.h" />
+    <ClInclude Include="GLProgram.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
