--- a/Arrow/Arrow.vcxproj.filters
+++ b/Arrow/Arrow.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="Window.cpp">
       <Filter>Window</Filter>
     </ClCompile>
+    <ClCompile Include="GLProgram.cpp">
+      <Filter>GLProgram</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
@@ -27,6 +30,9 @@
     </ClInclude>
     <ClInclude Include="Window.h">
       <Filter>Window</Filter>
+    </ClInclude>
+    <ClInclude Include="GLProgram.h">
+      <Filter>GLProgram</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +50,9 @@
     </Filter>
     <Filter Include="Shaders">
       <UniqueIdentifier>{4616ca8d-0994-46f5-b883-6d310e2ca7f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GLProgram">
+      <UniqueIdentifier>{bacd9d37-a0bb-4f1e-aa7d-c157f2fda689}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
